# Taurbots

./: AGENTS.md  PROMPTS.md  README.md  REVIEWS.md  STYLE.md  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  meta.yml  smoke.yml  tests.yml
project/context/: agents.md  humans.md
project/contributors/: contributors.md
project/design/: design.md
project/design/proposals/: README.md
project/evidence/: EV-0001.md
project/executions/: AD_HOC-TAURCODE-PRESERVE-FRONTMATTER-MERGE-2026-05-12.md
project/focus/: current_focus.md
project/goal/: project_goal.md
project/guardrails/: approvals.md  cost.md  optics.md  safety.md
project/memory/: decision_log.md
project/principles/: principles.md
project/roadmap/: roadmap.md
project/status/: current_status.md
project/work_items/: README.md  WI-BOOTSTRAP-0001.md  WI-TAURBOTS-BENCHMARK-ADAPTERS-RECIPES.md  WI-TAURBOTS-CORE-ABSTRACTIONS-SCHEMA.md  WI-TAURBOTS-CORE-SKELETON.md  WI-TAURBOTS-KUBUNTU-DOCTOR-SETUP.md  WI-TAURBOTS-SIMPLE2D-PRMRL-SMOKE.md
project/workstreams/: README.md  core-research-harness.md  external-simulator-and-benchmark-adapters.md  kubuntu-benchmark-workstation.md
scripts/: check-workflows  coverage  develop  format  lint  smoke  test
src/taurbots/: __init__.py  __main__.py
src/taurbots/adapters/: __init__.py
src/taurbots/algorithms/: __init__.py
src/taurbots/benchmarks/: __init__.py
src/taurbots/cli/: __init__.py  main.py
src/taurbots/core/: __init__.py
tests/cli_tests/: taurbots_cli_test.py
tests/core_tests/: package_import_test.py
(+2 files in other folders)
