[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taurbots"
version = "0.1.0"
description = "Simulator-agnostic robot-navigation research harness skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Taurbots maintainers"},
]
keywords = ["robot-navigation", "research", "simulation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.5",
  "PyYAML>=6.0",
  "ruff>=0.5",
]

[project.scripts]
taurbots = "taurbots.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true
source = ["taurbots"]

[tool.coverage.report]
show_missing = true
skip_covered = true
